# InfoCast

./: README.md  app.py  pyproject.toml
static/css/: styles.css
static/js/: backend.js  index.js
templates/: backend.html  index.html
