[tool.poetry]
name = "infocast"
version = "1.1.0"
description = "A simple live announcement system based off of the flask web framework and websockets."
authors = ["Liam Spatola"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.1.0"
Flask-SocketIO = "^5.4.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
